post-demo update. test instances added

--- a/solutionVisualisation.ipynb
+++ b/solutionVisualisation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -35,7 +35,7 @@
     "    \n",
     "    \n",
     "def plotRoutes(routes, filename:str = \"train_0.json\", annotate: bool = True):\n",
-    "    file_path = \"Project 2/src/main/resources/\"\n",
+    "    file_path = \"src/main/resources/\"\n",
     "    patients = getPatientsFromFile(file_path + filename)\n",
     "    \n",
     "    patient_locations = list()\n",
@@ -46,10 +46,6 @@
     "        patient_locations.append([patient[\"x_coord\"], patient[\"y_coord\"]])\n",
     "        \n",
     "    patient_locations = np.asarray(patient_locations)\n",
-    "\n",
-    " \n",
-    "    \n",
-    "\n",
     "\n",
     "    \n",
     "    fig, ax = plt.subplots()\n",
@@ -76,23 +72,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# insert route given by GA program\n",
-    "routes = [[], [], [], [], [], [], [], [], [], [], [], [], [], [], [32, 33, 31, 35, 37, 38, 39, 36, 34], [57, 55, 54, 53, 56, 58, 60, 59], [5, 3, 7, 8, 10, 11, 9, 6, 4, 2, 1, 75], [20, 24, 25, 27, 29, 30, 28, 26, 23, 22, 21], [43, 42, 41, 40, 44, 46, 45, 48, 51, 50, 52, 49, 47], [13, 17, 18, 19, 15, 16, 14, 12], [98, 96, 95, 94, 92, 93, 97, 100, 99], [81, 78, 76, 71, 70, 73, 77, 79, 80], [90, 87, 86, 83, 82, 84, 85, 88, 89, 91], [], [67, 65, 63, 62, 74, 72, 61, 64, 68, 66, 69]]\n"
+    "routes = [[], [], [], [], [], [], [], [], [], [], [], [], [], [90, 82, 99, 87, 75, 58, 77], [85, 63, 89, 76, 51, 56, 80], [3, 5, 45, 46, 8, 7, 6, 2, 4, 1, 100], [92, 33, 27, 30, 32, 50, 71, 93, 96], [42, 44, 43, 38, 41, 61, 68], [39, 36, 40, 35, 37, 72, 54, 81], [91, 95, 62, 67, 34, 28, 26, 29, 31, 94], [65, 57, 83, 64, 84, 66], [69, 88, 53, 10, 13, 16, 17, 47], [20, 21, 23, 22, 49, 19, 18, 48, 25, 24], [12, 14, 15, 11, 9, 97, 59, 74, 86, 52], [98, 73, 79, 78, 60, 55, 70]]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"train_0.json\"\n",
+    "filename = \"test_1.json\"\n",
     "plotRoutes(routes, filename, annotate=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
